@startuml cl-01-domain
' CL-01 · Modelo de clases del dominio AS-IS v1.1 (develop aced6da)
' Borrador textual para F23. Especificación y multiplicidades: ../class-model.md
hide empty methods
skinparam classAttributeIconSize 0

package "App\\Models" {
  class Organization {
    name
    slug {unique}
    tax_id {unique, opcional}
    is_active
  }
  class User {
    name
    email {unique}
    role : UserRole
    organization_id {nulo si postulante}
  }
  class JobRequest <<tenant scoped>> {
    organization_id
    code {unique por organización}
    position_title
    area
    headcount {>= 1}
    contract_type
    justification
    required_by
    status : JobRequestStatus
    observation
    submitted_at
    validated_at
    decided_at
    decision_comment
  }
  class JobRequestStatusHistory <<tenant scoped>> {
    organization_id
    from_status
    to_status
    comment
    created_at
  }
  class Vacancy <<tenant scoped>> {
    organization_id
    code {unique por organización}
    title
    summary
    location
    contract_type
    positions {>= 1}
    opens_at
    closes_at
    target_completion_at {> closes_at, opcional}
    status : VacancyStatus
    published_at
    closed_at
    closure_type : VacancyClosureType
    closure_notes
  }
  class JobProfile <<tenant scoped>> {
    organization_id
    education
    experience
    functions
    competencies
  }
  class EvaluationCriterion <<tenant scoped>> {
    organization_id
    name {unique por vacante}
    stage : CriterionStage
    weight {> 0}
    min_score
    max_score {> min_score}
  }
  class CandidateProfile {
    phone
    city
    education_level
    professional_title
    years_of_experience
    summary
  }
  class CandidateDocument {
    type : DocumentType
    original_name
    stored_path {unique, disco privado}
    mime_type
    size_bytes
  }
  class Application <<tenant scoped>> {
    organization_id
    status : ApplicationStatus
    applied_at
    stage_changed_at
  }
  class ApplicationStageHistory <<tenant scoped>> {
    organization_id
    from_status
    to_status
    comment
    created_at
  }
  class Evaluation <<tenant scoped>> {
    organization_id
    type : EvaluationType
    modality
    location
    scheduled_at
    duration_minutes {15..480}
    instructions
    status : AssessmentStatus
    invitation_sent_at
    completed_at
    observations
  }
  class EvaluationResult <<tenant scoped>> {
    organization_id
    score {>= 0}
    comment
  }
  class Interview <<tenant scoped>> {
    organization_id
    modality
    location
    scheduled_at
    duration_minutes {15..480}
    instructions
    status : AssessmentStatus
    outcome : InterviewOutcome
    invitation_sent_at
    completed_at
    observations
  }
  class InterviewResult <<tenant scoped>> {
    organization_id
    score {>= 0}
    comment
  }
  class SelectionDecision <<tenant scoped>> <<human decision>> {
    organization_id
    justification
    selected_position {>= 1}
    selected_score {0..100}
    ranked_candidates
    decided_at
    selection_registered_at
  }
  class AuditLog <<tenant scoped>> <<append only>> {
    organization_id {nulo para cuentas globales}
    action : AuditAction
    auditable_type
    auditable_id
    metadata
    ip_address
    created_at
  }
}

package "App\\Enums" {
  enum UserRole {
    solicitante
    rrhh
    aprobador
    evaluador
    postulante
  }
  enum JobRequestStatus {
    borrador
    enviado
    observado
    validado
    aprobado
    rechazado
  }
  enum VacancyStatus {
    borrador
    publicada
    cerrada
  }
  enum VacancyClosureType {
    con_seleccion
    desierta
  }
  enum ApplicationStatus {
    postulado
    preseleccionado
    en_evaluacion
    en_entrevista
    finalista
    seleccionado
    no_seleccionado
    descartado
  }
  enum AssessmentStatus {
    programada
    realizada
  }
  enum CriterionStage {
    evaluacion
    entrevista
  }
  enum InterviewOutcome {
    recomendado
    recomendado_con_reservas
    no_recomendado
  }
  enum EvaluationType {
    conocimientos
    clase_modelo
    practica
    otra
  }
  enum DocumentType {
    cv
  }
}

' 1-3 · Organización
Organization "0..1" -- "0..*" User : organization_id
Organization "1" -- "0..*" JobRequest
Organization "1" -- "0..*" Vacancy
Organization "0..1" -- "0..*" AuditLog

' 4-9 · Requerimiento
User "1" -- "0..*" JobRequest : requester
User "0..1" -- "0..*" JobRequest : validator
User "0..1" -- "0..*" JobRequest : decider
JobRequest "1" *-- "0..*" JobRequestStatusHistory
JobRequestStatusHistory "0..*" -- "1" User : author
JobRequest "1" -- "0..1" Vacancy : job_request_id {unique}

' 10-16 · Vacante y postulación
Vacancy "1" *-- "1" JobProfile
Vacancy "1" *-- "0..*" EvaluationCriterion
User "1" -- "0..*" Vacancy : creator
User "0..1" -- "0..*" Vacancy : publisher
User "0..1" -- "0..*" Vacancy : closer
Vacancy "1" -- "0..*" Application
User "1" -- "0..*" Application : candidate

' 17-21 · Postulante global
User "1" *-- "0..1" CandidateProfile
CandidateProfile "1" *-- "0..*" CandidateDocument
Application "0..*" -- "0..1" CandidateDocument : cvDocument
Application "1" *-- "0..*" ApplicationStageHistory
ApplicationStageHistory "0..*" -- "1" User : author

' 22-29 y 36-37 · Evaluación y entrevista (evaluator y scheduler son asociaciones distintas)
Application "1" -- "0..*" Evaluation
Application "1" -- "0..*" Interview
User "1" -- "0..*" Evaluation : evaluator
User "1" -- "0..*" Interview : evaluator
User "1" -- "0..*" Evaluation : scheduler (scheduled_by)
User "1" -- "0..*" Interview : scheduler (scheduled_by)
Evaluation "1" *-- "0..*" EvaluationResult
Interview "1" *-- "0..*" InterviewResult
EvaluationCriterion "1" -- "0..*" EvaluationResult
EvaluationCriterion "1" -- "0..*" InterviewResult

' 30-35 · Decisión y auditoría
Vacancy "1" -- "0..1" SelectionDecision : vacancy_id {unique}
SelectionDecision "0..1" -- "1" Application : selectedApplication
User "1" -- "0..*" SelectionDecision : decider (Aprobador)
User "0..1" -- "0..*" SelectionDecision : selectionRegistrar (RR. HH.)
User "0..1" -- "0..*" AuditLog : actor

note top of Organization
  Aislamiento lógico: las 13 clases <<tenant scoped>> pertenecen a
  exactamente una Organization (OrganizationScope + Policies de rol
  y organización). Solo se dibujan las asociaciones de User, JobRequest,
  Vacancy y AuditLog. Sin PostgreSQL RLS ni base por tenant.
end note

note bottom of CandidateProfile
  Global: User(postulante), CandidateProfile y CandidateDocument
  no llevan organization_id. El CV vive en el disco privado local.
end note

note right of Application
  UNIQUE (vacancy_id, candidate_id).
  Índice parcial: como mucho una postulación
  'seleccionado' por vacante.
end note

note right of SelectionDecision
  Una por vacante e inmutable. Instantánea del ranking
  al decidir. No depende del ML.
end note

note bottom of EvaluationCriterion
  stage separa criterios de evaluación y de entrevista
  (lo aplica ScoreSheetValidator, no una FK).
end note

note bottom of AuditLog
  Polimórfica: auditable_type + auditable_id apuntan a la entidad auditada.
  Trigger audit_logs_append_only: rechaza DELETE y todo UPDATE, salvo
  anular user_id cuando se borra el usuario (FK nullOnDelete).
end note
@enduml
